# verisoftbench-repos

./: .gitignore  CHANGES.md  README.md  aristotle_tasks.json  download_patches.py  evaluate.py  submit.py  successful_submissions.json  test_config_aristotle.json  update_results.py  verisoftbench_final_results.csv  verisoftbench_final_results.json
ArkLib/: .gitignore  ArkLib.lean  CONTRIBUTING.md  README.md
FVIntmax/: FVIntmax.lean  README.md
IntroEffects/: IntroEffects.lean  Main.lean  README.md
LeanExprEvaluator/: .gitignore  ExprEval.lean  Main.lean  README.md
LeroyCompilerVerificationCourse/: COPYRIGHT.md  LeroyCompilerVerificationCourse.lean  README.md
capless-lean/: Capless.lean  Makefile  README.md
clean/: .gitignore  Clean.lean  README.md  lake-manifest.json  lakefile.lean
clean/backends/plonky3/: Cargo.toml  readme.md
clean/backends/plonky3/src/: check_constraints.rs  clean_air.rs  clean_ast.rs  folder.rs  key.rs  lib.rs  lookup.rs  permutation.rs  proof.rs  prover.rs  verifier.rs
clean/backends/plonky3/tests/: TraceGen.lean  clean_air.rs  clean_fib.json  generate_trace.sh
connector/: README.md  aleph_patch.yaml  collect.py  config.py  evaluate.patch  evaluate.py  evaluator.patch  patch_prover.py  run.py  submit.py
core/: evaluator.py  patch_prover.py
docs/: index.html
extraction/: README.md  extract_deps.lean  lean_env_extractor.py  patch_repos_for_extraction.sh
iris-lean/: lake-manifest.json
juvix-lean/: Juvix.lean  LICENSE  README.md  Tests.lean
lean-formal-reasoning-program/: README.md  lake-manifest.json  lakefile.lean
(+720 files in other folders)
